--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "orhanerday/open-ai": "^4.8",
         "php-open-source-saver/jwt-auth": "^2.1",
         "spatie/laravel-permission": "^5.9",
-        "staudenmeir/eloquent-has-many-deep": "^1.7"
+        "staudenmeir/eloquent-has-many-deep": "^1.7",
+        "tcg/voyager": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
